Added MinMax score propagation and combination rule